syntax = "proto3";

package auth;

option go_package = "makarkananov.auth.v1;authv1";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string username = 1;
  string password = 2;
  string role = 3;
}
